linse/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Thu Aug 21 14:46:04 2014
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [442:140784]
-A INPUT -m state --state INVALID -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -s 224.0.0.0/4 -i eth0 -j DROP
-A INPUT -d 224.0.0.0/4 -i eth0 -j DROP
-A INPUT -s 240.0.0.0/5 -i eth0 -j DROP
-A INPUT -d 240.0.0.0/5 -i eth0 -j DROP
-A INPUT -s 0.0.0.0/8 -i eth0 -j DROP
-A INPUT -d 0.0.0.0/8 -i eth0 -j DROP
-A INPUT -d 239.255.255.0/24 -i eth0 -j DROP
-A INPUT -d 255.255.255.255/32 -i eth0 -j DROP
-A INPUT -d 144.76.209.101/32 -i eth0 -p icmp -m icmp --icmp-type 8 -m state --state NEW -j ACCEPT
-A INPUT -d 144.76.209.101/32 -i eth0 -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -d 144.76.209.101/32 -i eth0 -p tcp -m tcp --dport 23 -m state --state NEW -j ACCEPT
-A INPUT -d 144.76.209.101/32 -i eth0 -p tcp -m tcp --dport 53 -m state --state NEW -j ACCEPT
-A INPUT -d 144.76.209.101/32 -i eth0 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
COMMIT
# Completed on Thu Aug 21 14:46:04 2014
